# zephyr

./: README.md
drivers/modem/: modem_cmd_handler.c  modem_cmd_handler.h
drivers/pwm/: pwm_nrfx.c
drivers/serial/: uart_nrfx_uarte.c
drivers/wifi/esp/: esp.c
dts/bindings/iio/adc/: adc.yaml
ext/fs/littlefs/: CMakeLists.txt
ext/fs/littlefs/include/: lfs_config.h
include/: fs.h  kernel.h
include/fs/: fs_interface.h  littlefs.h
lib/posix/: fs.c
scripts/dts/: extract_dts_includes.py
subsys/fs/: CMakeLists.txt  Kconfig  fs.c  littlefs_fs.c  shell.c
subsys/logging/: log_backend_swo.c  log_core.c
subsys/net/l2/ppp/: misc.c
